# KOS-Engine

./: .gitignore  Procfile  QUICKSTART.md  README.md  SYSTEM.md  api.py  app.py  dashboard.py  deploy.py  kos_core_v4.py  nixpacks.toml  requirements-core.txt  requirements-full.txt  requirements.txt  setup.py  train_domain.py
.streamlit/: config.toml
agents/: agent_chemistry_6499c9.json  agent_chemistry_6499c9.py  agent_computer_science_3c7f39.json  agent_computer_science_3c7f39.py  agent_general_knowledge_17f311.json  agent_general_knowledge_17f311.py  agent_mathematics_3a9088.json  agent_mathematics_3a9088.py  agent_physics_cfbbb4.json  agent_physics_cfbbb4.py  monitor_report.json  registry.json
archive/: Procfile  app.py  dashboard.py  deploy.py  health_worker.py  kos_core_v4.py  monitor_agents.py  run_6hr.py
examples/: analogy.kasm  family.kasm  sequence.kasm
kasm/: __init__.py  abstraction.py  bridge.py  grammar.md  interpreter.py  lexer.py  parser.py  vsa.py
kos/: __init__.py  action_registry.py  agent_factory.py  agent_protocol.py  agent_registry.py  agent_router.py  answer_validator.py  architect.py  attention.py  auto_improve.py  autonomous.py  boot_brain.py  canary.py  causal_dag.py  compound_detector.py  constraints.py  daemon.py  decision_gate.py  domain_profiles.py  dreamer.py  drives.py  edge_types.py  emotion.py  emotion_integration.py  episodic_memory.py  evidence_store.py  experiment.py  feedback.py  forager.py  graph.py  hypothesis.py  (+44 more)
kos_rust/: Cargo.toml  pyproject.toml
kos_rust/src/: lib.rs
kos_wasm/: Cargo.toml
kos_wasm/src/: lib.rs
(+281 files in other folders)
