[package]
name = "kos_rust"
version = "5.0.0"
edition = "2024"
description = "KOS V5.0 — Arena-based Spreading Activation + SIMD Hypervectors"

[lib]
name = "kos_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
rand = "0.9"
rand_chacha = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
