[package]
name = "kos_wasm"
version = "7.0.0"
edition = "2021"
description = "KOS V7.0 — Browser WASM build"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level = "s"
lto = true
